[workspace]
resolver = "2"
members = [
    "packages/taladb-core",
    "packages/taladb-wasm",
    "packages/taladb-node",
    "packages/taladb-cli",
    "packages/taladb-react-native/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["thinkgrid-labs"]
license = "MIT"

[profile.release]
opt-level = 3
lto = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
