[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/bindings/web",
    "packages/bindings/node",
    "packages/tools/cli",
    "packages/bindings/react-native/rust",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["thinkgrid-labs"]
license = "MIT"

[profile.release]
opt-level = 3
lto = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
